restructure to modules and add Products/Sale module with their crud opreations

--- a/Smart-ERP.csproj
+++ b/Smart-ERP.csproj
@@ -6,8 +6,9 @@
     <RootNamespace>Smart_ERP</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.15"/>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
+    <!-- <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.15"/> -->
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="6.0.7"/>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.0.7"/>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.0"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0"/>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.0"/>
